2010-04-20  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 37895 - Share common code from UStringImplBase with StringImpl

        The implementation of StringImpl & UStringImpl is very similar.  Restructure
        StringImpl to match UStringImpl, moving the flags and length into a base class,
        so that this can be shared between both string types to increase code reuse.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * runtime/RopeImpl.h:
        (JSC::RopeImpl::RopeImpl):
        * runtime/UStringImpl.h:
        (JSC::UStringImpl::UStringImpl):
        * wtf/text/StringImpl.h:
        (WebCore::StringImpl::StringImpl):
        (WebCore::StringImpl::characters):
        * wtf/text/StringImplBase.h: Copied from JavaScriptCore/runtime/UStringImpl.h.
        (WTF::StringImplBase::length):
        (WTF::StringImplBase::operator new):
        (WTF::StringImplBase::StringImplBase):

2010-04-20  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Autogenerate yarr character tables
        https://bugs.webkit.org/show_bug.cgi?id=37877

        Use a python script to automatically generate character tables
        for the builtin YARR character classes.  This allows us to generate
        actual tables as well, by using these tables we can both increase
        performance of the check (for complex builtins) and reduce the actual
        code size.

        4-8% win on string-unpack-code, but lots of noise on other tests so
        i'm only confident saying its a 1% win overall.

        * DerivedSources.make:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * assembler/AbstractMacroAssembler.h:
        (JSC::AbstractMacroAssembler::ExtendedAddress::ExtendedAddress):
        * assembler/MacroAssembler.h:
        (JSC::MacroAssembler::branchTest8):
        * assembler/MacroAssemblerX86Common.h:
        (JSC::MacroAssemblerX86Common::branchTest8):