@@ -1,3 +1,12 @@
+2010-04-20  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by NOBODY (Build fix).
+
+        Fix gtk
+
+        * GNUmakefile.am:
+        * make-generated-sources.sh:
+
 2010-04-20  Gavin Barraclough  <barraclough@apple.com>
 
         Reviewed by Oliver Hunt.
